<resources>
    <string name="app_name">TrashToTreasure</string>
    <string name="login">Login page</string>
    <string name="login_label">Login</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">" Enter Email Id/Phone No"</string>
    <string name="password">" Enter Password"</string>
    <string name="already_having">Don\'t have An Account? <b><font color="055C9D">Signup</font></b></string>
    <string name="register_label">Signup</string>
    <string name="reenter_password">" Confirm Password"</string>
    <string name="already_having_login">Already have An Account? <b><font color="055C9D">Login</font></b></string>
    <string name="are_you_admin">Admin</string>
    <string name="are_you_user">user</string>
    <string name="title_activity_trash_to_treasure">TrashToTreasureActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">My Requests</string>
    <string name="title_notifications">Profile</string>
    <string name="fetch_address">Fetch Address</string>
    <string name="flatno">Flat No</string>
    <string name="city">City</string>
    <string name="country">Country</string>
    <string name="postal">Postal code</string>
    <string name="landmark">Landmark</string>
    <string name="address">Address</string>
    <string name="submit">Submit</string>
    <string name="venueheader">Thanks for supporting us.\nwe need some details from you.</string>
    <string name="name">Donar Name</string>
    <string name="contact_number">Contact Number</string>
    <string name="event">Event behalf Of</string>
    <string name="address_demo">Address: 12-6-117,viveknagar,kukatpally,\nHyderabad,500018</string>
    <string name="thanku">Thank You!!</string>
    <string name="confirm">Thanks for sharing food with us it will help for so many people who are in neddy!!. We are wishing to support us going farward!!!.</string>
    <string name="confirm_agent">One of our agent will contact you.</string>
    <string name="ok">Ok</string>
    <string name="event_name"><b>Name      :</b></string>
    <string name="event_id"><b>Req Id      :</b></string>
    <string name="event_address"><b>Address :</b></string>
    <string name="mobile"><b>Contact  :</b></string>
    <string name="event_status"><b>Status     :</b></string>
    <string name="name_display">Enter Display Name</string>
    <string name="office">Office Number</string>
    <string name="email">Email</string>
    <string name="profile">Update Profile</string>
    <string name="profilelabel">Profile</string>
    <string name="landLine">Landline Number</string>
    <string name="signout">Logout</string>
    <string name="title_activity_trash_to_treasure_admin">TrashToTreasureAdmin</string>
    <string name="title_activity_admin">AdminActivity</string>
    <string name="title_request">Requests</string>
    <string name="rider">Assign Rider</string>
    <string name="assign_driver">Assign Driver</string>
    <string name="drivername">DriverName</string>
    <string name="add">Add Photos</string>
    <string name="image"><b>Food Items :</b></string>
    <string name="click">Click here to view Images</string>
</resources>