<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:layout_constraintTop_toTopOf="parent"
    android:layout_marginBottom="20dp"
    android:paddingBottom="20dp">

    <TextView
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/address"
        android:textColor="@color/purple_500"
        android:textStyle="bold"
        android:textSize="30sp"
        android:layout_marginTop="30dp"
        android:id="@+id/tv_Address"
        />


    <EditText
        android:id="@+id/et_flat_no"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:fontFamily="@font/regular_extra"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toBottomOf="@id/tv_Address"
        android:paddingLeft="10dp"
        android:background="@drawable/et_background"
        android:hint="@string/flatno"
        android:importantForAutofill="no"
        android:inputType="text" />

    <EditText
        android:id="@+id/et_known_name"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:fontFamily="@font/regular_extra"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/et_flat_no"
        android:layout_marginStart="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:paddingLeft="10dp"
        android:background="@drawable/et_background"
        android:hint="@string/landmark"
        android:importantForAutofill="no"
        android:inputType="text" />

    <EditText
        android:id="@+id/et_city"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:paddingLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        app:layout_constraintTop_toBottomOf="@id/et_known_name"
        android:layout_marginEnd="20dp"
        android:fontFamily="@font/regular_extra"
        android:background="@drawable/et_background"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:hint="@string/city"
        android:importantForAutofill="no"
        android:inputType="text" />

    <EditText
        android:id="@+id/et_country"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:paddingLeft="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="@font/regular_extra"
        android:background="@drawable/et_background"
        android:hint="@string/country"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_city"
        android:importantForAutofill="no"
        android:inputType="text" />


    <EditText
        android:id="@+id/et_postal"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:paddingLeft="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="@font/regular_extra"
        android:background="@drawable/et_background"
        android:hint="@string/postal"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_country"
        android:importantForAutofill="no"
        android:inputType="text" />

    <Button
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/et_postal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:text="@string/submit"/>


</androidx.constraintlayout.widget.ConstraintLayout>