<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:layout_constraintTop_toTopOf="parent"
    android:layout_marginBottom="20dp"
    android:paddingBottom="20dp">

    <TextView
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/assign_driver"
        android:textColor="@color/purple_500"
        android:textStyle="bold"
        android:textSize="30sp"
        android:layout_marginTop="30dp"
        android:id="@+id/tv_Address"
        />


    <EditText
        android:id="@+id/etName"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:fontFamily="@font/regular_extra"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_Address"
        android:paddingLeft="10dp"
        android:visibility="gone"
        android:background="@drawable/et_background"
        android:hint="@string/name_display"
        android:importantForAutofill="no"
        android:inputType="text" />

    <EditText
        android:id="@+id/etDriver"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:fontFamily="@font/regular_extra"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/etName"
        android:layout_marginStart="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:paddingLeft="10dp"
        android:background="@drawable/et_background"
        android:hint="@string/drivername"
        android:importantForAutofill="no"
        android:inputType="text" />

    <EditText
        android:id="@+id/et_mobile"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:paddingLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        app:layout_constraintTop_toBottomOf="@id/etDriver"
        android:layout_marginEnd="20dp"
        android:fontFamily="@font/regular_extra"
        android:background="@drawable/et_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:hint="@string/contact_number"
        android:importantForAutofill="no"
        android:inputType="phone" />



    <Button
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/et_mobile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:text="@string/submit"/>

    <ProgressBar
        android:id="@+id/progress_circular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>