<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FfffFF"
    >


    <ImageView
        android:id="@+id/iv_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:src="@drawable/ic_baseline_arrow_back_ios_24"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/regular"
        android:text="@string/register_label"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_back" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_label">


        <ImageView
            android:id="@+id/iv_bg"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="30dp"
            android:layout_gravity="center"
            android:background="@drawable/food_waste"
            />

        <EditText
            android:id="@+id/et_display_name"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="20dp"
            android:fontFamily="@font/regular_extra"
            android:layout_marginEnd="20dp"
            android:paddingLeft="10dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/et_background"
            android:hint="@string/name_display"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/et_user_name"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="20dp"
            android:fontFamily="@font/regular_extra"
            android:layout_marginEnd="20dp"
            android:paddingLeft="10dp"
            android:background="@drawable/et_background"
            android:hint="@string/username"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:paddingLeft="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:fontFamily="@font/regular_extra"
            android:background="@drawable/et_background"
            android:hint="@string/password"
            android:importantForAutofill="no"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/et_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:paddingLeft="10dp"
            android:layout_marginEnd="20dp"
            android:fontFamily="@font/regular_extra"
            android:background="@drawable/et_background"
            android:hint="@string/reenter_password"
            android:importantForAutofill="no"
            android:inputType="textPassword" />
        <RadioGroup
            android:layout_width="match_parent"
            android:weightSum="2"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp">
        <RadioButton
            android:id="@+id/rb_admin"
            android:text="@string/are_you_admin"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:fontFamily="@font/regular_extra"
            android:layout_height="wrap_content"
            />

            <RadioButton
                android:id="@+id/rb_user"
                android:text="@string/are_you_user"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:fontFamily="@font/regular_extra"
                android:layout_height="wrap_content"
                />
        </RadioGroup>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register_label"
            android:layout_marginTop="20dp"
            android:textAllCaps="false"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:fontFamily="@font/regular_extra"
            android:background="@drawable/btn_bg"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            />


        <TextView
            android:id="@+id/tv_already_"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/regular_extra"
            android:layout_marginTop="15dp"
            android:text="@string/already_having_login"/>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progress_circular"
        android:layout_width="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="gone"
        android:backgroundTint="@color/purple_500"
        android:layout_height="wrap_content"
        />

</androidx.constraintlayout.widget.ConstraintLayout>